# ChangeLog for xfce-extra/xfce4-clipman-plugin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman-plugin/ChangeLog,v 1.2 2009/08/26 03:09:20 darkside Exp $

  26 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
  xfce4-clipman-plugin-1.0.2.ebuild:
  amd64 stable, bug 282650

*xfce4-clipman-plugin-1.0.2 (23 Aug 2009)
*xfce4-clipman-plugin-0.8.1 (23 Aug 2009)

  23 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-clipman-plugin-0.8.1.ebuild, +xfce4-clipman-plugin-1.0.2.ebuild:
  Rename xfce4-clipman to xfce4-clipman-plugin.
