@@ -1,12 +1,12 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman-plugin/Attic/xfce4-clipman-plugin-1.0.2.ebuild,v 1.3 2009/08/26 03:09:20 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman-plugin/Attic/xfce4-clipman-plugin-1.0.2.ebuild,v 1.4 2009/08/26 03:18:18 darkside Exp $
 
 EAPI=2
 inherit xfconf
 
 DESCRIPTION="a simple cliboard history manager for Xfce4 Panel"
-HOMEPAGE="http://www.xfce.org/"
+HOMEPAGE="http://goodies.xfce.org/projects/panel-plugins/xfce4-clipman-plugin"
 SRC_URI="mirror://xfce/src/panel-plugins/${PN}/1.0/${P}.tar.bz2"
 
 LICENSE="GPL-2"
