@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-places-plugin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-places-plugin/ChangeLog,v 1.1 2009/08/25 07:47:20 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-places-plugin/ChangeLog,v 1.2 2009/08/26 03:20:13 darkside Exp $
+
+  26 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
+  xfce4-places-plugin-1.2.0.ebuild:
+  useful HOMEPAGE
 
 *xfce4-places-plugin-1.2.0 (25 Aug 2009)
 *xfce4-places-plugin-1.1.0 (25 Aug 2009)
