@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-clipman-plugin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman-plugin/ChangeLog,v 1.2 2009/08/26 03:09:20 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman-plugin/ChangeLog,v 1.3 2009/08/26 03:18:18 darkside Exp $
+
+  26 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
+  xfce4-clipman-plugin-1.0.2.ebuild:
+  useful HOMEPAGE
 
   26 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
   xfce4-clipman-plugin-1.0.2.ebuild:
